--- a/intro-section-with-dropdown-navigation/package.json
+++ b/intro-section-with-dropdown-navigation/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "usehooks-ts": "^2.9.1"
   },
   "resolutions": {
     "styled-components": "^5"
