--- a/packages/intro-section-with-dropdown-navigation/package.json
+++ b/packages/intro-section-with-dropdown-navigation/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "yarn copy-files-from-to",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "check-types": "yarn tsc"
@@ -43,5 +44,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "copyFiles": [
+    {
+      "from": "build/**/*",
+      "to": "../../public/intro-section-with-dropdown-navigation"
+    }
+  ]
 }
