--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "turbo": "^1.5.6"
   },
   "scripts": {
-    "build": "yarn turbo run build"
-  }
+    "copy": "yarn copy-files-from-to",
+    "build": "yarn copy && yarn turbo run build copy"
+  },
+  "copyFiles": [
+    {
+      "from": "./index.html",
+      "to": "public/index.html"
+    }
+  ]
 }
