--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,11 @@
 {
     "$schema": "https://turborepo.org/schema.json",
     "pipeline": {
-        "build": {}
+        "build": {},
+        "copy": {
+            "dependsOn": [
+                "build"
+            ]
+        }
     }
 }
