fix: Avoid copy on unnecessary files on build time

--- a/packages/interactive-card-details-form/package.json
+++ b/packages/interactive-card-details-form/package.json
@@ -7,7 +7,14 @@
   },
   "copyFiles": [
     {
-      "from": "./**/*",
+      "from": [
+        "./**/*",
+        "!.turbo",
+        "!.gitignore",
+        "!*.md",
+        "!design",
+        "!package.json"
+      ],
       "to": "../../public/interactive-card-details-form"
     }
   ]
