--- a/packages/notifications-page/package.json
+++ b/packages/notifications-page/package.json
@@ -7,7 +7,14 @@
   },
   "copyFiles": [
     {
-      "from": "./**/*",
+      "from": [
+        "./**/*",
+        "!.turbo",
+        "!.gitignore",
+        "!*.md",
+        "!design",
+        "!package.json"
+      ],
       "to": "../../public/notifications-page"
     }
   ]
