fix: Disable cache for copy step

--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,7 @@
     "pipeline": {
         "build": {},
         "copy": {
+            "cache": false,
             "dependsOn": [
                 "build"
             ]
