--- a/packages/intro-section-with-dropdown-navigation/package.json
+++ b/packages/intro-section-with-dropdown-navigation/package.json
@@ -26,7 +26,8 @@
     "copy": "yarn copy-files-from-to",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "check-types": "yarn tsc"
+    "check-types": "yarn tsc",
+    "lint": "eslint ./src/**/*.{ts,tsx} --max-warnings=0"
   },
   "eslintConfig": {
     "extends": [
