--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,12 @@
 {
     "$schema": "https://turborepo.org/schema.json",
     "pipeline": {
-        "build": {},
+        "lint": {},
+        "build": {
+            "dependsOn": [
+                "lint"
+            ]
+        },
         "copy": {
             "cache": false,
             "dependsOn": [
