--- a/packages/news-homepage/package.json
+++ b/packages/news-homepage/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc"
   },
   "dependencies": {
+    "@next/font": "^13.0.4",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
