fix: Set .next folder as output for caching mechanism

--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,14 @@
                 "lint"
             ]
         },
+        "news-homepage#build": {
+            "dependsOn": [
+                "lint"
+            ],
+            "outputs": [
+                ".next/**"
+            ]
+        },
         "copy": {
             "cache": false,
             "dependsOn": [
