fix: Add out folder to be computed when caching

--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,8 @@
                 "lint"
             ],
             "outputs": [
-                ".next/**"
+                ".next/**",
+                "out/**"
             ]
         },
         "copy": {
