fix: only execute copy after build

--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,11 @@
                 "out/**"
             ]
         },
+        "news-homepage#copy": {
+            "dependsOn": [
+                "build"
+            ]
+        },
         "copy": {
             "cache": false,
             "dependsOn": [
