--- a/packages/news-homepage/package.json
+++ b/packages/news-homepage/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next/font": "^13.0.4",
     "next": "13.0.4",
+    "pino": "^8.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
