--- a/.github/workflows/upload-images.yml
+++ b/.github/workflows/upload-images.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    
+    paths:
+      - 'packages/news-homepage/public/images/**'
 
 jobs:
   upload:
