--- a/package.json
+++ b/package.json
@@ -13,13 +13,7 @@
     "turbo": "^1.9.3"
   },
   "scripts": {
-    "copy": "yarn copy-files-from-to",
-    "build": "yarn copy && yarn turbo run lint build copy"
-  },
-  "copyFiles": [
-    {
-      "from": "./index.html",
-      "to": "public/index.html"
-    }
-  ]
+    "prebuild": "npx mkdirp public && npx html-minifier-terser --collapse-whitespace --remove-comments --minify-css true index.html > public/index.html",
+    "build": "yarn turbo run lint build copy"
+  }
 }
